--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-body {
+/*body {
   text-align: center;
   font-family: courier;
   background-image: url("../assets/image.jpeg");
@@ -19,6 +19,123 @@ body {
 
 .my_social a img {
   height: 1.5em;
+}
+
+@font-face {
+  font-family: "Noboto Flex";
+  src: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/211696/NobotoFlex-VF.woff2") format("woff2-variations");
+}
+html {
+  font-family: "SourceSans" sans-serif;
+  font-weight: "wght" 400;
+}
+
+@supports (font-variation-settings: normal) {
+  html {
+    font-family: "Noboto Flex";
+    font-variation-settings: 400;
+  }
+}
+* {
+  box-sizing: border-box;
+}
+
+body {
+  color: brown;
+  margin: 0;
+  line-height: 1.5;
+  font-variation-settings: "SCAL" 74.4575,  "BASE" 446.904,  "SPAC" 135.359,  "wght" 148.141,  "OPTI" 29.9624,  "HEIG" 456,  "CAPS" 497.164,  "CAPA" 465.482,  "CAPB" 375.124,  "ASCE" 840.861,  "DESC" 793.403,  "DIAC" 31.7564,  "MONO" 0,  "CURV" 0;
+}
+
+h1 {
+  font-size: 3rem;
+  text-align: left;
+  transition: all 250ms ease;
+  line-height: 1;
+  font-variation-settings: "SCAL" 100,  "BASE" 500,  "SPAC" 100,  "wght" 55, "OPTI" 20,  "HEIG" 456,  "CAPS" 455,  "CAPA" 400,  "CAPB" 166,  "ASCE" 456, "DESC" 456,  "DIAC" 0,  "MONO" 0,  "CURV" 0;
+  animation: heading 1500ms ease infinite alternate-reverse;
+}
+
+@-webkit-keyframes heading {
+  to {
+    font-variation-settings: "SCAL" 100,  "BASE" 500,  "SPAC" 100,  "wght" 55, "OPTI" 20,  "HEIG" 456,  "CAPS" 455,  "CAPA" 400,  "CAPB" 166,  "ASCE" 1000, "DESC" 456,  "DIAC" 100,  "MONO" 0,  "CURV" 0;
+  }
+}
+
+@keyframes heading {
+  to {
+    font-variation-settings: "SCAL" 100,  "BASE" 500,  "SPAC" 100,  "wght" 55, "OPTI" 20,  "HEIG" 456,  "CAPS" 455,  "CAPA" 400,  "CAPB" 166,  "ASCE" 1000, "DESC" 456,  "DIAC" 100,  "MONO" 0,  "CURV" 0;
+  }
+}
+h2, h3 {
+  font-variation-settings: "SCAL" 100,  "BASE" 500,  "SPAC" 79.3982,  "wght" 322,  "OPTI" 45.11,  "HEIG" 357.316,  "CAPS" 574.948,  "CAPA" 420.056,  "CAPB" 321.776,  "ASCE" 644.146,  "DESC" 687.704,  "DIAC" 67.7662,  "MONO" 0,  "CURV" 0;
+  line-height: 1.2;
+  margin-bottom: 1em;
+  margin-top: 2em;
+  text-transform: uppercase;
+}
+
+p {
+  margin-bottom: 1em;
+}
+
+strong {
+  font-variation-settings: "SCAL" 100,  "BASE" 500,  "SPAC" 171.296,  "wght" 54,  "OPTI" 100,  "HEIG" 235.224,  "CAPS" 656,  "CAPA" 656,  "CAPB" 168.552,  "ASCE" 1000,  "DESC" 1000,  "DIAC" 0,  "MONO" 100,  "CURV" 100;
+}
+
+em {
+  font-style: italic;
+}
+
+blockquote {
+  padding-left: 1em;
+  border-left: 1px solid currentcolor;
+  font-variation-settings: "SCAL" 100,  "BASE" 500,  "SPAC" 171.296,  "wght" 54,  "OPTI" 100,  "HEIG" 235.224,  "CAPS" 656,  "CAPA" 656,  "CAPB" 168.552,  "ASCE" 1000,  "DESC" 1000,  "DIAC" 0,  "MONO" 100,  "CURV" 100;
+  line-height: 1.5;
+}
+
+ol, ul {
+  padding-left: 2em;
+  margin-bottom: 1em;
+}
+
+ul {
+  list-style-type: square;
+  padding-left: 1em;
+}
+
+ol {
+  list-style-type: lower-latin;
+}
+
+li ol, li ul {
+  padding-left: 1em;
+  margin-bottom: 0;
+}
+
+.header--img img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 30vh;
+  margin: 0;
+}
+
+.header--content {
+  padding: 4vw 10vw;
+}
+
+.post--content {
+  margin-top: 10px;
+  -webkit-columns: 4 250px;
+          columns: 4 250px;
+  -webkit-column-gap: 4em;
+          column-gap: 4em;
+  -webkit-column-rule: 1px solid #ddd;
+          column-rule: 1px solid #ddd;
+  padding: 0 10vw 8vw;
+  max-height: 75vh;
+  overflow-x: auto;
 }
 
 .containers {
