--- a/css/styles.css
+++ b/css/styles.css
@@ -37,11 +37,11 @@ body {
   height: 2.5em;
 }
 
-/*.my_social a img {
+.my_social a img {
   height: 1.5em;
 }
 
-h1 {
+/*h1 {
   font-size: 3rem;
   text-align: left;
   transition: all 250ms ease;
