--- a/css/styles.css
+++ b/css/styles.css
@@ -41,16 +41,16 @@ body {
   height: 1.5em;
 }
 
-/*h1 {
+h1 {
   font-size: 3rem;
   text-align: left;
   transition: all 250ms ease;
   line-height: 1;
-  font-variation-settings: "SCAL" 100,  "BASE" 500,  "SPAC" 100,  "wght" 55, "OPTI" 20,  "HEIG" 456,  "CAPS" 455,  "CAPA" 400,  "CAPB" 166,  "ASCE" 456, "DESC" 456,  "DIAC" 0,  "MONO" 0,  "CURV" 0;
+  font-variation-settings: "SCAL" 100, "BASE" 500, "SPAC" 100, "wght" 55, "OPTI" 20, "HEIG" 456, "CAPS" 455, "CAPA" 400, "CAPB" 166, "ASCE" 456, "DESC" 456, "DIAC" 0, "MONO" 0, "CURV" 0;
   animation: heading 1500ms ease infinite alternate-reverse;
 }
 
-@-webkit-keyframes heading {
+/*@-webkit-keyframes heading {
   to {
     font-variation-settings: "SCAL" 100,  "BASE" 500,  "SPAC" 100,  "wght" 55, "OPTI" 20,  "HEIG" 456,  "CAPS" 455,  "CAPA" 400,  "CAPB" 166,  "ASCE" 1000, "DESC" 456,  "DIAC" 100,  "MONO" 0,  "CURV" 0;
   }
