--- a/css/styles.css
+++ b/css/styles.css
@@ -56,12 +56,13 @@ h1 {
   }
 }
 
-/*@keyframes heading {
+@keyframes heading {
   to {
-    font-variation-settings: "SCAL" 100,  "BASE" 500,  "SPAC" 100,  "wght" 55, "OPTI" 20,  "HEIG" 456,  "CAPS" 455,  "CAPA" 400,  "CAPB" 166,  "ASCE" 1000, "DESC" 456,  "DIAC" 100,  "MONO" 0,  "CURV" 0;
+    font-variation-settings: "SCAL" 100, "BASE" 500, "SPAC" 100, "wght" 55, "OPTI" 20, "HEIG" 456, "CAPS" 455, "CAPA" 400, "CAPB" 166, "ASCE" 1000, "DESC" 456, "DIAC" 100, "MONO" 0, "CURV" 0;
   }
 }
-h2, h3 {
+
+/*h2, h3 {
   font-variation-settings: "SCAL" 100,  "BASE" 500,  "SPAC" 79.3982,  "wght" 322,  "OPTI" 45.11,  "HEIG" 357.316,  "CAPS" 574.948,  "CAPA" 420.056,  "CAPB" 321.776,  "ASCE" 644.146,  "DESC" 687.704,  "DIAC" 67.7662,  "MONO" 0,  "CURV" 0;
   line-height: 1.2;
   margin-bottom: 1em;
