--- a/css/styles.css
+++ b/css/styles.css
@@ -74,11 +74,11 @@ p {
   margin-bottom: 1em;
 }
 
-/*strong {
-  font-variation-settings: "SCAL" 100,  "BASE" 500,  "SPAC" 171.296,  "wght" 54,  "OPTI" 100,  "HEIG" 235.224,  "CAPS" 656,  "CAPA" 656,  "CAPB" 168.552,  "ASCE" 1000,  "DESC" 1000,  "DIAC" 0,  "MONO" 100,  "CURV" 100;
+strong {
+  font-variation-settings: "SCAL" 100, "BASE" 500, "SPAC" 171.296, "wght" 54, "OPTI" 100, "HEIG" 235.224, "CAPS" 656, "CAPA" 656, "CAPB" 168.552, "ASCE" 1000, "DESC" 1000, "DIAC" 0, "MONO" 100, "CURV" 100;
 }
 
-em {
+/*em {
   font-style: italic;
 }
 
