--- a/css/styles.css
+++ b/css/styles.css
@@ -89,12 +89,12 @@ blockquote {
   line-height: 1.5;
 }
 
-/*ol, ul {
+ol, ul {
   padding-left: 2em;
   margin-bottom: 1em;
 }
 
-ul {
+/*ul {
   list-style-type: square;
   padding-left: 1em;
 }
