--- a/css/styles.css
+++ b/css/styles.css
@@ -94,12 +94,12 @@ ol, ul {
   margin-bottom: 1em;
 }
 
-/*ul {
+ul {
   list-style-type: square;
   padding-left: 1em;
 }
 
-ol {
+/*ol {
   list-style-type: lower-latin;
 }
 
