--- a/css/styles.css
+++ b/css/styles.css
@@ -108,15 +108,15 @@ li ol, li ul {
   margin-bottom: 0;
 }
 
-/*.header--img img {
+.header--img img {
   -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   width: 100%;
   height: 30vh;
   margin: 0;
 }
 
-.header--content {
+/*.header--content {
   padding: 4vw 10vw;
 }
 
