--- a/css/styles.css
+++ b/css/styles.css
@@ -116,11 +116,11 @@ li ol, li ul {
   margin: 0;
 }
 
-/*.header--content {
+.header--content {
   padding: 4vw 10vw;
 }
 
-.post--content {
+/*.post--content {
   margin-top: 10px;
   -webkit-columns: 4 250px;
           columns: 4 250px;
