--- a/css/styles.css
+++ b/css/styles.css
@@ -120,20 +120,20 @@ li ol, li ul {
   padding: 4vw 10vw;
 }
 
-/*.post--content {
+.post--content {
   margin-top: 10px;
   -webkit-columns: 4 250px;
-          columns: 4 250px;
+  columns: 4 250px;
   -webkit-column-gap: 4em;
-          column-gap: 4em;
+  column-gap: 4em;
   -webkit-column-rule: 1px solid #ddd;
-          column-rule: 1px solid #ddd;
+  column-rule: 1px solid #ddd;
   padding: 0 10vw 8vw;
   max-height: 75vh;
   overflow-x: auto;
 }
 
-.containers {
+/*.containers {
   width: 520px;
   margin: 20px auto;
 }
