--- a/css/styles.css
+++ b/css/styles.css
@@ -133,12 +133,12 @@ li ol, li ul {
   overflow-x: auto;
 }
 
-/*.containers {
+.containers {
   width: 520px;
   margin: 20px auto;
 }
 
-#contact h1 {
+/*#contact h1 {
   font-family: helvetica;
   font-weight: normal;
   text-align: center;
