--- a/css/styles.css
+++ b/css/styles.css
@@ -138,7 +138,7 @@ li ol, li ul {
   margin: 20px auto;
 }
 
-/*#contact h1 {
+#contact h1 {
   font-family: helvetica;
   font-weight: normal;
   text-align: center;
@@ -150,7 +150,7 @@ li ol, li ul {
   border-bottom: 3px solid #f3f3f3;
 }
 
-.cal {
+/*.cal {
   display: inline-block;
   background: #ffe;
   color: #555;
