--- a/css/styles.css
+++ b/css/styles.css
@@ -150,7 +150,7 @@ li ol, li ul {
   border-bottom: 3px solid #f3f3f3;
 }
 
-/*.cal {
+.cal {
   display: inline-block;
   background: #ffe;
   color: #555;
@@ -160,7 +160,7 @@ li ol, li ul {
   transition: all 0.2s linear;
 }
 
-.cal:hover {
+/*.cal:hover {
   transform: scale(2.5);
   transition: all 0.4s linear;
 }
