--- a/css/styles.css
+++ b/css/styles.css
@@ -165,13 +165,13 @@ li ol, li ul {
   transition: all 0.4s linear;
 }
 
-/*.cal caption {
+.cal caption {
   background: #d44;
   color: #eee;
   font-size: 15px;
 }
 
-.cal th {
+/*.cal th {
   color: #aaa;
   line-height: 200%;
 }
