--- a/css/styles.css
+++ b/css/styles.css
@@ -171,12 +171,12 @@ li ol, li ul {
   font-size: 15px;
 }
 
-/*.cal th {
+.cal th {
   color: #aaa;
   line-height: 200%;
 }
 
-.cal th:first-child {
+/*.cal th:first-child {
   color: #f00;
 }
 
