--- a/css/styles.css
+++ b/css/styles.css
@@ -180,11 +180,11 @@ li ol, li ul {
   color: #f00;
 }
 
-/*.cal th:last-child {
+.cal th:last-child {
   color: #04d;
 }
 
-.cal td {
+/*.cal td {
   padding: 0 2px;
   line-height: 100%;
 }
